src/objects/VoidManagementStage__c.object
<CustomObject>
    <fields>
        <fullName>VoidManagementProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Void Management Process</label>
        <referenceTo>VoidManagementProcess__c</referenceTo>
        <relationshipLabel>Void Management Stages</relationshipLabel>
        <relationshipName>VoidManagementStages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VoidStageDate__c</fullName>
        <inlineHelpText>Date the customer moved on to the current stage</inlineHelpText>
        <label>Void Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VoidStage__c</fullName>
        <inlineHelpText>Stage that the customer is at within the process</inlineHelpText>
        <label>Void Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Void Management Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Void Management Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Void Management Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>